fix: z-index to header

--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -12,6 +12,7 @@
   opacity: 1 !important;
   padding: 2rem 1.5rem;
   overflow: visible;
+  z-index: 2;
 
   & i {
     font-size: 2.4rem;
